--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About Us</a>
+                        <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="departmentsDropdown" role="button"
@@ -47,11 +47,14 @@
                             <a class="dropdown-item" href="gynaecology.html">Gynaecology</a>
                         </div>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="#doctors">Careers</a>
-                    </li> -->
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
+                        <a class="nav-link" href="careers.html">Careers</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="R&D.html">Research & Development</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -217,28 +220,28 @@
                             <!-- Slide 1 -->
                             <div class="carousel-item active">
                                 <div class="row text-center">
-                                    <div class="col-4"><img src="award1.png" class="img-fluid" alt="Award 1"></div>
-                                    <div class="col-4"><img src="award2.png" class="img-fluid" alt="Award 2"></div>
-                                    <div class="col-4"><img src="award3.png" class="img-fluid" alt="Award 3"></div>
+                                    <div class="col-4"><img src="img/award-1.png" class="achievements-awards-logos" alt="Award 1"></div>
+                                    <div class="col-4"><img src="img/award-2.png" class="achievements-awards-logos" alt="Award 2"></div>
+                                    <div class="col-4"><img src="img/award-3.png" class="achievements-awards-logos" alt="Award 3"></div>
                                 </div>
                                 <div class="row mt-4 text-center">
-                                    <div class="col-4"><img src="award4.png" class="img-fluid" alt="Award 4"></div>
-                                    <div class="col-4"><img src="award5.png" class="img-fluid" alt="Award 5"></div>
-                                    <div class="col-4"><img src="award6.png" class="img-fluid" alt="Award 6"></div>
+                                    <div class="col-4"><img src="img/award-1.png" class="achievements-awards-logos" alt="Award 4"></div>
+                                    <div class="col-4"><img src="img/award-2.png" class="achievements-awards-logos" alt="Award 5"></div>
+                                    <div class="col-4"><img src="img/award-3.png" class="achievements-awards-logos" alt="Award 6"></div>
                                 </div>
                             </div>
 
                             <!-- Slide 2 -->
                             <div class="carousel-item">
                                 <div class="row text-center">
-                                    <div class="col-4"><img src="award7.png" class="img-fluid" alt="Award 7"></div>
-                                    <div class="col-4"><img src="award8.png" class="img-fluid" alt="Award 8"></div>
-                                    <div class="col-4"><img src="award9.png" class="img-fluid" alt="Award 9"></div>
+                                    <div class="col-4"><img src="img/award-1.png" class="achievements-awards-logos" alt="Award 7"></div>
+                                    <div class="col-4"><img src="img/award-2.png" class="achievements-awards-logos" alt="Award 8"></div>
+                                    <div class="col-4"><img src="img/award-3.png" class="achievements-awards-logos" alt="Award 9"></div>
                                 </div>
                                 <div class="row mt-4 text-center">
-                                    <div class="col-4"><img src="award10.png" class="img-fluid" alt="Award 10"></div>
-                                    <div class="col-4"><img src="award11.png" class="img-fluid" alt="Award 11"></div>
-                                    <div class="col-4"><img src="award12.png" class="img-fluid" alt="Award 12"></div>
+                                    <div class="col-4"><img src="img/award-1.png" class="achievements-awards-logos" alt="Award 10"></div>
+                                    <div class="col-4"><img src="img/award-2.png" class="achievements-awards-logos" alt="Award 11"></div>
+                                    <div class="col-4"><img src="img/award-3.png" class="achievements-awards-logos" alt="Award 12"></div>
                                 </div>
                             </div>
 
