--- a/ent.html
+++ b/ent.html
@@ -33,7 +33,7 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About Us</a>
+                        <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="departmentsDropdown" role="button"
@@ -48,11 +48,14 @@
                             <a class="dropdown-item" href="gynaecology.html">Gynaecology</a>
                         </div>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="#doctors">Careers</a>
-                    </li> -->
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
+                        <a class="nav-link" href="careers.html">Careers</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="R&D.html">Research & Development</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -63,7 +66,7 @@
     <div class="subpage-bannersection-main" style="background-image: linear-gradient(to right, rgba(173, 216, 230, 0.5), rgba(173, 216, 230, 0.5)), url('img/ent-banner.avif');
            background-position: center 90%;
            background-size: cover;">
-        <h1 class="subpage-bannersection-title">ENT & Physician Segment</h1>
+        <h1 class="subpage-bannersection-title">ENT & Physician</h1>
     </div>
     <!--banner section end -->
 
