--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About Us</a>
+                        <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="departmentsDropdown" role="button"
@@ -46,11 +46,14 @@
                             <a class="dropdown-item" href="gynaecology.html">Gynaecology</a>
                         </div>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="#doctors">Careers</a>
-                    </li> -->
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
+                        <a class="nav-link" href="careers.html">Careers</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="R&D.html">Research & Development</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -69,21 +72,21 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div class="slide-bg"
-                        style="background-image: linear-gradient(rgba(255, 193, 7, 0.5), rgba(255, 193, 7, 0.5)), url('img/Slider-1.jpg');">
+                        style="background-image: linear-gradient(rgba(255, 193, 7, 0.5), rgba(255, 193, 7, 0.5)), url('img/Slider-4.jpg');">
                         <div class="carousel-caption">
-                            <h1>WE PROVIDE BEST <br> HEALTHCARE</h1>
-                            <p>Explicabo esse amet tempora quibusdam laudantium, laborum eaque magnam fugiat hic?</p>
-                            <a href="#" class="btn btn-primary">Read More</a>
+                            <h1>WE PROVIDE BEST <br>HEALTHCARE</h1>
+                            <p>Compassionate care with advanced technology and trusted medical experts.</p>
+                            <!-- <a href="#" class="btn btn-primary">Read More</a> -->
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="slide-bg"
-                        style="background-image: linear-gradient(rgba(40, 167, 69, 0.5), rgba(40, 167, 69, 0.5)), url('img/Slider-3.jpg');">
+                        style="background-image: linear-gradient(rgba(40, 167, 69, 0.5), rgba(40, 167, 69, 0.5)), url('img/Slider-1.jpg');">
                         <div class="carousel-caption">
-                            <h1>ADVANCED <br> CARDIOLOGY</h1>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit.</p>
-                            <a href="cardiac.html" class="btn btn-primary">Explore</a>
+                            <h1>ADVANCED <br> CARDIOLOGY CARE</h1>
+                            <p>Expert cardiac care with advanced diagnostics and personalized treatment for a healthier heart.</p>
+                            <!-- <a href="cardiac.html" class="btn btn-primary">Explore</a> -->
                         </div>
                     </div>
                 </div>
@@ -91,9 +94,9 @@
                     <div class="slide-bg"
                         style="background-image: linear-gradient(to bottom right, rgba(255, 182, 193, 0.6), rgba(255, 105, 180, 0.6)), url('img/Slider-2.webp');">
                         <div class="carousel-caption">
-                            <h1>EXPERT <br>INFERTILITY</h1>
-                            <p>Magni, aliquid sit. Molestiae quas vel sint commodi repudiandae consequuntur.</p>
-                            <a href="gynaecology.html" class="btn btn-primary">Discover</a>
+                            <h1>EXPERT <br>INFERTILITY CARE</h1>
+                            <p>Compassionate fertility solutions with advanced treatments tailored to your parenthood journey.</p>
+                            <!-- <a href="gynaecology.html" class="btn btn-primary">Discover</a> -->
                         </div>
                     </div>
                 </div>
@@ -115,7 +118,7 @@
                         <img class="vividus-product-icons" src="img/Cardiac-icon.png" alt="Cardiac-icon"> 
                     </div>
                     <h5>Cardiac</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p>Comprehensive heart care focused on prevention, diagnosis, and treatment of cardiovascular diseases.</p>
                     <a href="cardiac.html" class="vividus-services-btn">Learn More →</a>
                 </div>
             </div>
@@ -125,7 +128,7 @@
                         <img class="vividus-product-icons" src="img/Diabetic-icon.png" alt="Diabetic-icon"> 
                     </div>
                     <h5>Diabetic</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p>Expert management and support for diabetes to maintain healthy blood sugar levels.</p>
                     <a href="cardiac.html" class="vividus-services-btn">Learn More →</a>
                 </div>
             </div>
@@ -135,7 +138,7 @@
                         <img class="vividus-product-icons" src="img/orthopedics-icon.png" alt="Orthopedics-icon"> 
                     </div>
                     <h5>Orthopedics</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p>Specialized care for bones, joints, and muscles to restore mobility and reduce pain.</p>
                     <a href="orthopedic.html" class="vividus-services-btn">Learn More →</a>
                 </div>
             </div>
@@ -145,7 +148,7 @@
                         <img class="vividus-product-icons" src="img/ent-icon.png" alt="ENT-icon"> 
                     </div>
                     <h5>ENT</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p>Comprehensive treatment of ear, nose, and throat conditions for better health and comfort.</p>
                     <a href="ent.html" class="vividus-services-btn">Learn More →</a>
                 </div>
             </div>
@@ -154,9 +157,8 @@
                     <div class="vividus-services-icon">
                         <img class="vividus-product-icons" src="img/urology-icon.png" alt="Urology-icon"> 
                     </div>
-
                     <h5>Urology</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p>Expert care for urinary tract and male reproductive system health and disorders.</p>
                     <a href="urology.html" class="vividus-services-btn">Learn More →</a>
                 </div>
             </div>
@@ -165,9 +167,8 @@
                     <div class="vividus-services-icon">
                         <img class="vividus-product-icons" src="img/general-icon.png" alt="General-icon"> 
                     </div>
-
                     <h5>General</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p>Comprehensive primary care services for overall health and wellness at every stage of life.</p>
                     <a href="urology.html" class="vividus-services-btn">Learn More →</a>
                 </div>
             </div>
@@ -177,7 +178,7 @@
                         <img class="vividus-product-icons" src="img/Gynaecology-icon.png" alt="Gynaecology-icon"> 
                     </div>
                     <h5>Gynaecology</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p>Dedicated care for women’s reproductive health, from routine check-ups to specialized treatments.</p>
                     <a href="gynaecology.html" class="vividus-services-btn">Learn More →</a>
                 </div>
             </div>
@@ -186,9 +187,8 @@
                     <div class="vividus-services-icon">
                         <img class="vividus-product-icons" src="img/infertility-icon.png" alt="Infertility-icon"> 
                     </div>
-
                     <h5>Infertility</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p>Personalized treatments and support to help couples achieve their dream of parenthood.</p>
                     <a href="gynaecology.html" class="vividus-services-btn">Learn More →</a>
                 </div>
             </div>
@@ -203,7 +203,7 @@
                 <!-- Left Side Images -->
                 <div class="col-lg-6 mb-4 mb-lg-0">
                     <div class="position-relative">
-                        <img src="img/home_about.png" alt="Main" class="img-fluid rounded-4">
+                        <img src="img/home_about.gif" alt="Main" class="img-fluid rounded-4">
                     </div>
                 </div>
                 <!-- Right Side Content -->
@@ -285,26 +285,24 @@
                 <!-- FAQ Item 1 -->
                 <div class="card">
                     <div class="vividus-faqs-header" data-toggle="collapse" data-target="#faq1">
-                        <div><strong>01</strong> Do I need a prescription to buy medicine?</div>
+                        <div>What types of medicines does your company produce?</div>
                         <div class="faq-icon"><i class="fas fa-chevron-down"></i></div>
                     </div>
                     <div id="faq1" class="collapse" data-parent="#faqAccordion">
                         <div class="vividus-faqs-body">
-                            Yes, prescription medications require a valid prescription from a licensed doctor.
-                            Over-the-counter (OTC) medicines can be purchased without one. </div>
+                            We specialize in manufacturing a wide range of pharmaceutical products, including antiviral, antibiotic, and specialty medicines to address various health needs.</div>
                     </div>
                 </div>
 
                 <!-- FAQ Item 2 -->
                 <div class="card">
                     <div class="vividus-faqs-header active" data-toggle="collapse" data-target="#faq2">
-                        <div><strong>02</strong> Can I order medicine online from your pharmacy?</div>
+                        <div>Has your company developed any new medicines for recent viruses?</div>
                         <div class="faq-icon rotate"><i class="fas fa-chevron-down"></i></div>
                     </div>
                     <div id="faq2" class="collapse show" data-parent="#faqAccordion">
                         <div class="vividus-faqs-body">
-                            Yes, you can easily order medicines online through our website. We also offer home delivery
-                            for both prescription and OTC products.
+                            Yes, we continuously invest in R&D to develop and launch effective medicines targeting emerging viruses and infectious diseases.
                         </div>
                     </div>
                 </div>
@@ -312,13 +310,12 @@
                 <!-- FAQ Item 3 -->
                 <div class="card">
                     <div class="vividus-faqs-header" data-toggle="collapse" data-target="#faq3">
-                        <div><strong>03</strong> How do I upload my prescription?</div>
+                        <div>How do you ensure the quality and safety of your medicines?</div>
                         <div class="faq-icon"><i class="fas fa-chevron-down"></i></div>
                     </div>
                     <div id="faq3" class="collapse" data-parent="#faqAccordion">
                         <div class="vividus-faqs-body">
-                            You can upload your prescription during the checkout process or by logging into your account
-                            and selecting the “Upload Prescription” option.
+                            All our medicines undergo rigorous quality control tests and comply with international regulatory standards to guarantee safety and efficacy.
                         </div>
                     </div>
                 </div>
@@ -326,13 +323,12 @@
                 <!-- FAQ Item 4 -->
                 <div class="card">
                     <div class="vividus-faqs-header" data-toggle="collapse" data-target="#faq4">
-                        <div><strong>04</strong> Are generic drugs safe to use?</div>
+                        <div>Where are your medicines manufactured?</div>
                         <div class="faq-icon"><i class="fas fa-chevron-down"></i></div>
                     </div>
                     <div id="faq4" class="collapse" data-parent="#faqAccordion">
                         <div class="vividus-faqs-body">
-                            Yes, generic drugs are approved by health authorities and contain the same active
-                            ingredients as branded medicines. They’re safe, effective, and more affordable.
+                            Our production facilities are equipped with state-of-the-art technology and are certified to meet global pharmaceutical manufacturing standards.
                         </div>
                     </div>
                 </div>
