--- a/gynaecology.html
+++ b/gynaecology.html
@@ -198,32 +198,38 @@
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="urology.html">Services</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
+                        <li><a href="careers.html">Careers</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3 mb-3">
+                    <h6>Our Services</h6>
+                    <ul class="list-unstyled vividus-footer-links">
+                        <li><a href="cardiac.html">Cardiac</a></li>
+                        <li><a href="orthopedic.html">Orthopedics</a></li>
+                        <li><a href="ent.html">ENT</a></li>
+                        <li><a href="urology.html">Urology</a></li>
+                        <li><a href="gynaecology.html">Gynaecology</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 mb-3">
                     <h6>Information</h6>
                     <p>+91 9876543210</p>
+                    <p>+91 9876543210</p>
                     <p>mail@example</p>
                 </div>
                 <div class="col-md-3 mb-3">
                     <h6>Our Location</h6>
-                    <p>Vijayawada, Ramavarapadu</p>
-                </div>
-                <div class="col-md-3 mb-3">
-                    <h6>Social Media</h6>
-                    <div class="vividus-footer-social">
-                        <a href="#" class="vividus-footer-icon"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="vividus-footer-icon"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="vividus-footer-icon"><i class="fab fa-youtube"></i></a>
-                        <a href="#" class="vividus-footer-icon"><i class="fab fa-instagram"></i></a>
-                    </div>
+                    <p>Block B, Survey No.155/60, Bhyraveshwara
+                        Industrial Estate, Andrahalli, Main Road, Near
+                        Peenya 2nd Stage, Bangalore North,
+                        Bangalore Urban, Karnataka-560091</p>
                 </div>
             </div>
             <hr>
             <div class="row">
                 <div class="col text-center d-flex justify-content-between">
                     <small>Vividus Life Science PVT.LDT</small><br>
-                    <small>Copyright © 2025 All rights reserved</small>
+                    <small>Copyright © 2025 All rights reserved <a href="https://digispheretech.in/" target="_blank">DIGISPHERE</a></small>
                 </div>
             </div>
         </div>
