--- a/R&D.html
+++ b/R&D.html
@@ -348,81 +348,63 @@
 
     <!-- footer section code start  -->
     <footer class="vividus-footer-main py-4">
-      <div class="container-fluid px-5">
-        <div
-          class="row align-items-center mb-5 justify-content-between vividus-footer-section"
-        >
-          <div class="col-md-3 text-center text-md-left mb-3 mb-md-0">
-            <img
-              src="img/vividus-logo1.png"
-              alt="MedEase"
-              class="mb-2"
-              style="max-width: 150px"
-            />
-          </div>
-          <div class="col-md-6 mb-3 mb-md-0">
-            <form class="form-inline justify-content-end">
-              <input
-                type="email"
-                class="form-control mb-2 mr-sm-2 vividus-footer-input"
-                id="email"
-                placeholder="Your Email"
-              />
-              <button
-                type="submit"
-                class="btn btn-success mb-2 vividus-footer-button"
-              >
-                Submit Button
-              </button>
-            </form>
-          </div>
-        </div>
-
-        <div class="row text-center text-md-left">
-          <div class="col-md-3 mb-3">
-            <h6>Quick Link</h6>
-            <ul class="list-unstyled vividus-footer-links">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="urology.html">Services</a></li>
-              <li><a href="contact.html">Contact Us</a></li>
-            </ul>
-          </div>
-          <div class="col-md-3 mb-3">
-            <h6>Information</h6>
-            <p>+91 9876543210</p>
-            <p>mail@example</p>
-          </div>
-          <div class="col-md-3 mb-3">
-            <h6>Our Location</h6>
-            <p>Vijayawada, Ramavarapadu</p>
-          </div>
-          <div class="col-md-3 mb-3">
-            <h6>Social Media</h6>
-            <div class="vividus-footer-social">
-              <a href="#" class="vividus-footer-icon"
-                ><i class="fab fa-facebook-f"></i
-              ></a>
-              <a href="#" class="vividus-footer-icon"
-                ><i class="fab fa-twitter"></i
-              ></a>
-              <a href="#" class="vividus-footer-icon"
-                ><i class="fab fa-youtube"></i
-              ></a>
-              <a href="#" class="vividus-footer-icon"
-                ><i class="fab fa-instagram"></i
-              ></a>
+        <div class="container-fluid px-5">
+            <div class="row align-items-center mb-5 justify-content-between vividus-footer-section">
+                <div class="col-md-3 text-center text-md-left mb-3 mb-md-0">
+                    <img src="img/vividus-logo1.png" alt="MedEase" class="mb-2" style="max-width: 150px;">
+                </div>
+                <div class="col-md-6 mb-3 mb-md-0">
+                    <form class="form-inline justify-content-end">
+                        <input type="email" class="form-control mb-2 mr-sm-2 vividus-footer-input" id="email"
+                            placeholder="Your Email">
+                        <button type="submit" class="btn btn-success mb-2 vividus-footer-button">Submit Button</button>
+                    </form>
+                </div>
             </div>
-          </div>
+
+            <div class="row text-center text-md-left">
+                <div class="col-md-3 mb-3">
+                    <h6>Quick Link</h6>
+                    <ul class="list-unstyled vividus-footer-links">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="urology.html">Services</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
+                        <li><a href="careers.html">Careers</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3 mb-3">
+                    <h6>Our Services</h6>
+                    <ul class="list-unstyled vividus-footer-links">
+                        <li><a href="cardiac.html">Cardiac</a></li>
+                        <li><a href="orthopedic.html">Orthopedics</a></li>
+                        <li><a href="ent.html">ENT</a></li>
+                        <li><a href="urology.html">Urology</a></li>
+                        <li><a href="gynaecology.html">Gynaecology</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3 mb-3">
+                    <h6>Information</h6>
+                    <p>+91 9876543210</p>
+                    <p>+91 9876543210</p>
+                    <p>mail@example</p>
+                </div>
+                <div class="col-md-3 mb-3">
+                    <h6>Our Location</h6>
+                    <p>Block B, Survey No.155/60, Bhyraveshwara
+                        Industrial Estate, Andrahalli, Main Road, Near
+                        Peenya 2nd Stage, Bangalore North,
+                        Bangalore Urban, Karnataka-560091</p>
+                </div>
+            </div>
+            <hr>
+            <div class="row">
+                <div class="col text-center d-flex justify-content-between">
+                    <small>Vividus Life Science PVT.LDT</small><br>
+                    <small>Copyright © 2025 All rights reserved <a href="https://digispheretech.in/" target="_blank">DIGISPHERE</a></small>
+                </div>
+            </div>
         </div>
-        <hr />
-        <div class="row">
-          <div class="col text-center d-flex justify-content-between">
-            <small>Vividus Life Science PVT.LDT</small><br />
-            <small>Copyright © 2025 All rights reserved</small>
-          </div>
-        </div>
-      </div>
     </footer>
     <!-- footer section code end  -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
