about us change

--- a/contact.html
+++ b/contact.html
@@ -109,17 +109,20 @@
                 <div class="col-lg-4 text-center">
                     <img src="img/contact-us.jpg" alt="Healthcare Team" class="contactus-page-img mb-3">
                     <div class="contactus-page-info">
-                        <p><strong>Vijayawada, Ramavarapadu</strong></p>
+                        <p><strong>Block B, Survey No.155/60, Bhyraveshwara
+                                Industrial Estate, Andrahalli, Main Road, Near
+                                Peenya 2nd Stage, Bangalore North,
+                                Bangalore Urban, Karnataka-560091</strong></p>
                         <p>+91 9876543211</p>
                         <p>vividus@gmail.com</p>
                     </div>
 
-                    <div class="contactus-page-social">
+                    <!-- <div class="contactus-page-social">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
                         <a href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -180,7 +183,8 @@
             <div class="row">
                 <div class="col text-center d-flex justify-content-between">
                     <small>Vividus Life Science PVT.LDT</small><br>
-                    <small>Copyright © 2025 All rights reserved <a href="https://digispheretech.in/" target="_blank">DIGISPHERE</a></small>
+                    <small>Copyright © 2025 All rights reserved <a href="https://digispheretech.in/"
+                            target="_blank">DIGISPHERE</a></small>
                 </div>
             </div>
         </div>
