--- a/index.html
+++ b/index.html
@@ -208,30 +208,23 @@
                 </div>
                 <!-- Right Side Content -->
                 <div class="col-lg-6">
-                    <h6 class="vividus-aboutus-subtitle  mb-2">Why Choose Us</h6>
+                    <h6 class="vividus-aboutus-subtitle  mb-0">About Us</h6>
                     <h2 class="vividus-aboutus-maintitle">Your Health <br>Our Commitment</h2>
-                    <p class="vividus-aboutus-text mb-4">
-                        There are many variations of passages of Lorem Ipsum available, bhe mred alne in form, by
-                        injected humour, or which don't look even slilieavble.
-                    </p>
+                    <p class="vividus-aboutus-text mb-4">We are a pharmaceutical marketing company driven by a passion for healthcare excellence. With a strong portfolio of high-quality products and a dynamic team of professionals, we bridge the gap between manufacturers and medical practitioners.</p>
                     <div class="row">
-                        <div class="col-md-6 text-center mb-3 mb-md-0">
+                        <div class="col-md-6 text-md-start mb-3 mb-md-0">
                             <i class="fas fa-award fa-3x text-white mb-2 vividus-aboutus-icon"></i>
                             <h5 class="fw-bold mt-3">Certified Medicine</h5>
-                            <p class="small">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec.
-                            </p>
+                            <p class="small">We offer only GMP-certified medicines that meet global safety and quality standards.</p>
                         </div>
-                        <div class="col-md-6 text-center">
+                        <div class="col-md-6 text-md-start">
                             <i class="fas fa-users fa-3x text-white mb-2 vividus-aboutus-icon"></i>
                             <h5 class="fw-bold mt-3">Professional Team</h5>
-                            <p class="small">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec.
-                            </p>
+                            <p class="small">Our expert team ensures ethical, accurate, and impactful pharmaceutical marketing support.</p>
                         </div>
                     </div>
                     <a href="about.html" class="a-line"><button class="vividus-aboutus-button">
-                            Learn More
+                            Read More
                         </button></a>
                 </div>
             </div>
