--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     <header class="vividus-header-main navbar navbar-expand-lg navbar-light">
         <div class="container-fluid px-0">
             <a class="navbar-brand" href="#">
-            <img src="img/vividus-logo1.png" class="VIVIDUS-Logo-img" alt="VIVIDUS Logo">
+                <img src="img/vividus-logo1.png" class="VIVIDUS-Logo-img" alt="VIVIDUS Logo">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -80,37 +80,49 @@
                     </div>
                     <h2 class="fw-bold text-dark mb-3 about-whatwe-sectiontitle ">Healthcare Solutions<br> for a
                         Healthier Tomorrow</h2>
-                    <p class="mb-4 text-muted">At our pharmacy, we are dedicated to providing top-notch healthcare
-                        solutions with a focus on quality, safety, and personalized care.</p>
-                    <img src="img/about-us-img.jpg" class="about-whatwe-image" alt="Pharmacy Image">
+                    <p class="mb-4 text-muted">We are a pharmaceutical marketing company driven by a passion for
+                        healthcare excellence. With a strong portfolio of high-quality products and a dynamic team of
+                        professionals, we bridge the gap between manufacturers and medical practitioners. Our aim is to
+                        support better patient outcomes by making trusted pharmaceutical solutions accessible through
+                        strategic marketing and ethical practices. As we grow, our commitment remains firm—to enhance
+                        healthcare delivery through innovation, integrity, and excellence.</p> <img
+                        src="img/about-us-img.jpg" class="about-whatwe-image" alt="Pharmacy Image">
                 </div>
 
                 <!-- Right Card & Content -->
                 <div class="col-lg-5 mt-4 mt-lg-0">
-                    <div class="about-whatwe-card mb-3">
+                    <div class="about-whatwe-card mb-2">
                         <div class="mb-3">
                             <h5><span class="about-whatwe-icon">🎯</span>Our Vision</h5>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                ut.</p>
+                            <p>To be a trusted leader in pharmaceutical marketing by delivering innovative, effective,
+                                and high-quality healthcare solutions that improve lives globally.</p>
                         </div>
                         <div>
                             <h5><span class="about-whatwe-icon">🚀</span>Our Mission</h5>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                ut.</p>
+                            <p>Our mission is to connect healthcare providers and patients with the highest quality
+                                pharmaceutical products through strategic marketing, ethical practices, and an
+                                unwavering commitment to excellence. We strive to create long-lasting relationships with
+                                our partners and contribute to the advancement of global health.</p>
                         </div>
                         <div class="about-whatwe-address mt-4">
-                            📍 Vijayawada, Ramavarapadu<br>
-                            📞 +91 976543211
+                            📍Block B, Survey No.155/60, Bhyraveshwara
+                            Industrial Estate, Andrahalli, Main Road, Near
+                            Peenya 2nd Stage, Bangalore North,
+                            Bangalore Urban, Karnataka-560091
                         </div>
                     </div>
 
                     <!-- ContentSet Block (Replaces Review) -->
                     <div class="about-whatwe-contentset">
-                        <h6 class="mb-2 fw-bold">Your Custom ContentSet</h6>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.
-                        </p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.
-                        </p>
+                        <h6 class="mb-2 core-values">Core Values</h6>
+                        <ul>
+                            <li>Integrity – We uphold the highest standards of honesty and transparency in everything we do.</li>
+                            <li>Quality – We are committed to promoting only the finest, rigorously tested pharmaceutical products.</li>
+                            <li>Innovation – We embrace change and seek creative approaches to healthcare marketing.</li>
+                            <li>Customer-Centricity – We prioritize the needs of healthcare providers, patients, and partners.</li>
+                            <li>Collaboration – We believe in the power of teamwork and long-term partnerships.</li>
+                            <li>Responsibility – We operate with a sense of duty toward society, the environment, and future generations.</li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -165,12 +177,7 @@
                     </div>
                     <div class="text-section-aboutwhychooseus">
                         <h2>Caring for Your Health with Integrity & Excellence</h2>
-                        <p>At our pharmacy, we are dedicated to providing top-notch healthcare solutions with a focus on
-                            quality, safety, and personalized care.Lorem ipsum dolor sit amet, consectetur adipiscing
-                            elit, sed do eiusmod tempor incididunt ut.
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.
-
-
+                        <p>Partnering with us means choosing trust, innovation, and a true commitment to global health. We connect high-quality, tested pharmaceutical products with the people who need them, using smart, ethical marketing strategies. Our focus on people—patients, partners, and healthcare professionals—is what truly sets us apart. Plus, our deep industry knowledge helps us stay ahead in a fast-changing healthcare world.</p>
                         <div class="contact-section-aboutwhychooseus">
                             <div class="wellness-journey-aboutwhychooseus">
                                 <h5>Wellness Journey</h5>
@@ -220,28 +227,40 @@
                             <!-- Slide 1 -->
                             <div class="carousel-item active">
                                 <div class="row text-center">
-                                    <div class="col-4"><img src="img/award-1.png" class="achievements-awards-logos" alt="Award 1"></div>
-                                    <div class="col-4"><img src="img/award-2.png" class="achievements-awards-logos" alt="Award 2"></div>
-                                    <div class="col-4"><img src="img/award-3.png" class="achievements-awards-logos" alt="Award 3"></div>
+                                    <div class="col-4"><img src="img/award-1.png" class="achievements-awards-logos"
+                                            alt="Award 1"></div>
+                                    <div class="col-4"><img src="img/award-2.png" class="achievements-awards-logos"
+                                            alt="Award 2"></div>
+                                    <div class="col-4"><img src="img/award-3.png" class="achievements-awards-logos"
+                                            alt="Award 3"></div>
                                 </div>
                                 <div class="row mt-4 text-center">
-                                    <div class="col-4"><img src="img/award-1.png" class="achievements-awards-logos" alt="Award 4"></div>
-                                    <div class="col-4"><img src="img/award-2.png" class="achievements-awards-logos" alt="Award 5"></div>
-                                    <div class="col-4"><img src="img/award-3.png" class="achievements-awards-logos" alt="Award 6"></div>
+                                    <div class="col-4"><img src="img/award-1.png" class="achievements-awards-logos"
+                                            alt="Award 4"></div>
+                                    <div class="col-4"><img src="img/award-2.png" class="achievements-awards-logos"
+                                            alt="Award 5"></div>
+                                    <div class="col-4"><img src="img/award-3.png" class="achievements-awards-logos"
+                                            alt="Award 6"></div>
                                 </div>
                             </div>
 
                             <!-- Slide 2 -->
                             <div class="carousel-item">
                                 <div class="row text-center">
-                                    <div class="col-4"><img src="img/award-1.png" class="achievements-awards-logos" alt="Award 7"></div>
-                                    <div class="col-4"><img src="img/award-2.png" class="achievements-awards-logos" alt="Award 8"></div>
-                                    <div class="col-4"><img src="img/award-3.png" class="achievements-awards-logos" alt="Award 9"></div>
+                                    <div class="col-4"><img src="img/award-1.png" class="achievements-awards-logos"
+                                            alt="Award 7"></div>
+                                    <div class="col-4"><img src="img/award-2.png" class="achievements-awards-logos"
+                                            alt="Award 8"></div>
+                                    <div class="col-4"><img src="img/award-3.png" class="achievements-awards-logos"
+                                            alt="Award 9"></div>
                                 </div>
                                 <div class="row mt-4 text-center">
-                                    <div class="col-4"><img src="img/award-1.png" class="achievements-awards-logos" alt="Award 10"></div>
-                                    <div class="col-4"><img src="img/award-2.png" class="achievements-awards-logos" alt="Award 11"></div>
-                                    <div class="col-4"><img src="img/award-3.png" class="achievements-awards-logos" alt="Award 12"></div>
+                                    <div class="col-4"><img src="img/award-1.png" class="achievements-awards-logos"
+                                            alt="Award 10"></div>
+                                    <div class="col-4"><img src="img/award-2.png" class="achievements-awards-logos"
+                                            alt="Award 11"></div>
+                                    <div class="col-4"><img src="img/award-3.png" class="achievements-awards-logos"
+                                            alt="Award 12"></div>
                                 </div>
                             </div>
 
@@ -405,7 +424,8 @@
             <div class="row">
                 <div class="col text-center d-flex justify-content-between">
                     <small>Vividus Life Science PVT.LDT</small><br>
-                    <small>Copyright © 2025 All rights reserved <a href="https://digispheretech.in/" target="_blank">DIGISPHERE</a></small>
+                    <small>Copyright © 2025 All rights reserved <a href="https://digispheretech.in/"
+                            target="_blank">DIGISPHERE</a></small>
                 </div>
             </div>
         </div>
